[package]
name = "html-datetime-local"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
thiserror = "1.0.51"

[dev-dependencies]
proptest = "1.0.0"
